FIX: nome do relatório

--- a/src/main/resources/templates/relatorioemailtemplate.html
+++ b/src/main/resources/templates/relatorioemailtemplate.html
@@ -40,7 +40,7 @@
     }
 </style>
 <body>
-    <h1>Relatrório de registros de horas.</h1>
+    <h1>Relatório de registros de horas.</h1>
     <p>Seu relatório foi gerado com sucesso.</p>
     </br>
     {{tabela}}
